# smoke-simulation

./: CMakeLists.txt  README.md  build.bat
src/: arena.c  arena.h  debug.h  main.c  particle_system.c  particle_system.h
